fix: 🐛 Add word break to activity to prevent overflow

--- a/src/components/Activity.scss
+++ b/src/components/Activity.scss
@@ -10,6 +10,11 @@
   }
   .content {
     margin-top: .5rem;
+    word-break: break-all;
+
+    * {
+      white-space: break-spaces;
+    }
   }
   .footer {
     margin-top: .5rem;
